syntax = "proto3";

option go_package = "serializationpb";
import "google/protobuf/any.proto";

message SerializationId {
    int32 serializationId = 1;
}

message SerializedInstance {
    SerializationId serializationId = 1;
    google.protobuf.Any data = 2;
}

message SerializedGraph {
    repeated SerializedInstance objects = 1;
}